fixed:Alignment of options displaying on pop up is not as per mock up.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -138,6 +138,14 @@ button, .button-md, .button-ios {
     margin: auto;
 }
 
+.action-sheet-md .action-sheet-group .button-inner {
+    -webkit-justify-content: center !important; 
+    -ms-flex-pack: center !important;
+    justify-content: center !important; 
+}
+.action-sheet-md .action-sheet-title {
+        text-align: center !important;
+}
 
 
 
